--- a/style.css
+++ b/style.css
@@ -1,3 +1,75 @@
-* {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+
+
+body {
+  margin: 0;
+  font-family: 'Roboto';
+}
+
+header {
+  background-color: #1F2937;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 0 12em;
+}
+
+#logo {
+  font-size: 24px;
+  color: #F9FAF8;
+  font-weight: 800;
+}
+
+nav ul {
+  list-style-type: none;
+  display: flex;
+  gap: 1.5em;
+  margin: 0;
+}
+
+p,
+nav a {
+  font-size: 18px;
+  color: #E5E7EB;
+  text-decoration: none;
+  margin-top: 0;
+}
+
+.hero {
+  background-color: #1F2937;
+  padding: 5em 12em;
+  display: flex;
+  gap: 5em;
+}
+
+.left-col {
+  width: 45%;
+}
+
+h1{
+  font-size: 48px;
+  color: #F9FAF8;
+  font-weight: 900;
+  margin: 0;
+}
+
+button {
+  padding: 7px 1em;
+  width: 120px;
+  color: #E5E7EB;
+  background-color: #3882F6;
+  border-radius: 8px;
+  border: none;
+}
+
+.right-col {
+  background-color: grey;
+  flex-grow: 1;
+}
+
+.image p{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 215px;
 }
