--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ header {
   justify-content: space-between;
   align-items: baseline;
   padding: 0 12em;
+  padding-top: 1em;
 }
 
 #logo {
@@ -72,4 +73,44 @@ button {
   align-items: center;
   justify-content: center;
   height: 215px;
+}
+
+.info {
+  padding: 5em 12em;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+h2 {
+  font-size: 36px;
+  font-weight: 900;
+  color: #1F2937;
+  margin: 0;
+}
+
+.card-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 3em 0 6em 0;
+}
+
+.card p {
+  text-align: center;
+  color: #1F2937;
+  max-width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: .5em;
+}
+
+.box {
+  border: 4px solid #3882F6;
+  border-radius: 20px;
+  width: 160px;
+  height: 160px;
 }
